# llm-zoomcamp-2026-code

./: .gitignore  Modelfile  README.md  pyproject.toml
llm-zoomcamp-onnx/: 01-onnx_ending.ipynb  01-week_2-homework.ipynb  download.py  pyproject.toml
src/: build_prompt.py  rag_helper.py  searching_tool.py  tools.py
week_1/: 01-RAG.ipynb  02-dataset.ipynb  03-search.ipynb  04-building-prompt.ipyb.ipynb  05-LLM.ipynb  06-RAG-helper.ipynb  07-data-ingestion-pt1.ipynb  07-data-ingestion-pt2.ipynb  12-RAG-revision.ipynb  13-function-calling.ipynb  14-agentic-loop.ipynb  homework.ipynb
week_1/src/: rag_helper.py  retrieve_documents.py  searching_tool.py
week_2/: 01-emmbedings.ipynb  02-pgvector-db.ipynb
