[project]
name = "llm-zoomcamp-2026-code"
version = "0.1.0"
description = "LLM Zoomcamp Code using Ollama for local LLMs inference and a bit of langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain-ollama>=1.1.0",
    "minsearch>=0.1.0",
    "ollama>=0.5.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "psycopg[binary]>=3.3.4",
]



[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
